<resources>
    <string name="app_name">WhatsApp Chat Locker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="accessibility_service_des">Allow the Accessibility service to enable chat locker for your device</string>
    <string name="version">Version</string>
    <string name="version_key">version_key</string>
    <string name="consent_key">consent_key</string>
    <string name="more_apps">Get more Apps</string>
    <string name="more_key">more_key</string>
    <string name="more_apps_summary">Get More Apps from Us</string>
    <string name="rate_app">Rate App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="feedback">Give feedback</string>
    <string name="rate_key">rate_key</string>
    <string name="share_key">share_key</string>
    <string name="privacy_key">privacy_key</string>
    <string name="email_key">email_key</string>
    <string name="rate_app_summary">Rate this App</string>
    <string name="share_app_summary">Share this App to your friends</string>
    <string name="privacy_summary">View Privacy Policy</string>
    <string name="feedback_summary">Give Feedback about this App</string>
    <string name="title_activity_about">About</string>
    <string name="action_about">About</string>
    <string name="rate_dialog_title">Rate App ?</string>
    <string name="enable">Enable</string>
    <string name="not_installed">WhatsApp is not Installed on your device</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_Delete">Delete</string>
    <string name="positive_button">Rate 5 star</string>
    <string name="negative_button">Not Now</string>
    <string name="form_title">Rate this App?</string>
    <string name="form_hint">Hint</string>
    <string name="form_submit">Submit</string>
    <string name="form_cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="auto_start_title">Auto Start App</string>
    <string name="accessibility_service_title">Accessibility Service</string>
    <string name="changepin">Change Pin</string>
    <string name="fingerprint_auth">Fingerprint Authorization</string>
    <string name="fingerprint_summery">Authorize using fingerprint</string>
    <string name="auto_start_des">Auto start this app in background</string>
    <string name="complete_applock">Lock WhatsApp completely</string>
    <string name="changepinSummery">Change your lock pin</string>
    <string name="changepinDialog">Change your pin</string>
    <string name="f69no">No</string>
    <string name="share_app_message">"Hey there, Use this Awesome app to Lock your WhatsApp Chats, and keep them Private…Download ChatLocker for WhatsApp Now :https://play.google.com/store/apps/details?id=%s"</string>
    <string name="accessibility_permission_consent">ACCESSIBILITY PERMISSION CONSENT</string>
    <string name="whatsapp_locker_needs_accessibility_permission_to_run_its_core_functionality_permission_will_be_used_only_to">WhatsApp Locker Needs Accessibility Permission to Run Its Core Functionality. Permission Will Be Used Only To:</string>
    <string name="_1_monitor_which_chat_you_open_close_on_whatsapp_messenger_10_10_2_lock_unlock_specific_chat_on_whatsapp_messenger">1. Monitor which chat you open/close on Whatsapp Messenger.1010 2. Lock/Unlock Specific Chat on Whatsapp Messenger.</string>
    <string name="note_we_do_not_read_or_access_your_chats_files_this_permission_does_not_allow_us_to_read_or_access_any_of_your_chats_files">NOTE: WE DO NOT READ OR ACCESS YOUR CHATS/FILES. THIS PERMISSION DOES NOT ALLOW US TO READ OR ACCESS ANY OF YOUR CHATS/FILES.</string>
    <string name="i_allow_to_use_this_accessibility_permission">I ALLOW TO USE THIS ACCESSIBILITY PERMISSION</string>
    <string name="please_check_this_box">Please check this box</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="learn_more_about_our">Learn more about our</string>
    <string name="privacy_policy_amp_terms"><![CDATA[Privacy Policy & Terms]]></string>


    <string name="intMain">ca-app-pub-7993956656856547/9949491990</string>
    <string name="bannerEmail">ca-app-pub-7993956656856547/9328860682</string>
</resources>